feat: integrate signup

--- a/website/public/locales/en/index.json
+++ b/website/public/locales/en/index.json
@@ -14,6 +14,7 @@
     "name": "Name",
     "description": "Description",
     "email": "Email",
+    "password": "Password",
     "error": "Something went wrong. Please try again.",
     "errorTitle": "Oops!",
     "success": "Your changes have been saved.",
@@ -211,6 +212,7 @@
     "buttonLabel": "Register",
     "namePlaceholder": "Your name",
     "emailPlaceholder": "Your best email",
+    "passwordPlaceholder": "Your password",
     "newsletterConsent": "I would like to sign up for your newsletter, but only if you promise not to bother me (approx. 1-2 per month). I am aware that I can unsubscribe whenever I choose.",
     "privacyAndTermsConsent": "Your terms and conditions are acceptable to me. I read the privacy policy, I am aware that you care about my privacy and will never share my data with anyone.",
     "privacyPolicy": "Privacy Policy",
