--- a/website/public/locales/es/index.json
+++ b/website/public/locales/es/index.json
@@ -14,6 +14,7 @@
     "name": "Nombre",
     "description": "Descripción",
     "email": "Correo electrónico",
+    "password": "Contraseña",
     "emailMain": "Tu correo electrónico principal",
     "error": "Algo salió mal. Inténtalo de nuevo.",
     "errorTitle": "Oops!",
@@ -218,6 +219,7 @@
     "buttonLabel": "Registrarme",
     "namePlaceholder": "Nombre completo",
     "emailPlaceholder": "Correo electrónico",
+    "passwordPlaceholder": "Contraseña",
     "newsletterConsent": "Me gustaría suscribirme a su boletín de noticias, pero sólo si prometen no molestarme (aproximadamente 1-2 al mes). Soy consciente de que puedo darme de baja cuando quiera.",
     "privacyAndTermsConsent": "Sus condiciones son aceptables para mí.He leído la política de privacidad. Soy consciente de que os preocupáis por mi privacidad y de que nunca compartiréis mis datos con nadie.",
     "privacyPolicy": "Política de privacidad",
