--- a/website/public/locales/it/index.json
+++ b/website/public/locales/it/index.json
@@ -14,6 +14,7 @@
     "name": "Nome",
     "description": "Descrizione",
     "email": "Email",
+    "password": "Password",
     "error": "Qualcosa è andato storto. Riprova.",
     "errorTitle": "Oops!",
     "success": "Le tue modifiche sono state salvate.",
@@ -210,6 +211,7 @@
     "buttonLabel": "Registrati",
     "namePlaceholder": "Nome completo",
     "emailPlaceholder": "La tua migliore email",
+    "passwordPlaceholder": "La tua migliore password",
     "newsletterConsent": "Vorrei iscrivermi alla vostra newsletter, ma solo se mi promettete di non disturbarmi (circa 1-2 al mese). Sono consapevole di potermi cancellare quando voglio.",
     "privacyAndTermsConsent": "I vostri termini e condizioni sono accettabili per me. Ho letto l'informativa sulla privacy. Sono consapevole che avete a cuore la mia privacy e che non condividerete mai i miei dati con nessuno.",
     "privacyPolicy": "Informativa sulla privacy",
