--- a/website/public/locales/pt/index.json
+++ b/website/public/locales/pt/index.json
@@ -14,6 +14,7 @@
     "name": "Nome",
     "description": "Descrição",
     "email": "Email",
+    "password": "Senha",
 
     "error": "Algo deu errado. Tente novamente.",
     "errorTitle": "Ops!",
@@ -211,6 +212,7 @@
     "buttonLabel": "Cadastrar",
     "namePlaceholder": "Nome completo",
     "emailPlaceholder": "Seu melhor email",
+    "passwordPlaceholder": "Senha",
     "newsletterConsent": "Eu gostaria de assinar seu boletim informativo, mas somente se você prometer não me incomodar (aproximadamente 1-2 por mês). Estou ciente de que posso cancelar minha assinatura sempre que quiser.",
     "privacyAndTermsConsent": "Seus termos e condições são aceitáveis para mim. Eu li a política de privacidade. Estou ciente de que você se preocupa com minha privacidade e nunca compartilhará meus dados com ninguém.",
     "privacyPolicy": "Política de privacidade",
