feat: login sigunp refactor style

--- a/website/public/locales/pt/index.json
+++ b/website/public/locales/pt/index.json
@@ -214,7 +214,7 @@
       "buttonLabel": "Cadastrar"
     },
     "login": {
-      "title": "Bem vindo de volta!",
+      "title": "Bem vindo!",
       "body": "Você pode criar contadores regressivos e editá-los em qualquer momento.\nCadastre-se abaixo para começar.",
       "buttonLabel": "Entrar"
     },
