--- a/website/public/locales/es/index.json
+++ b/website/public/locales/es/index.json
@@ -144,14 +144,19 @@
         "linkTarget": "Enlace de destino",
         "transparentProp": "Fondo transparente",
         "backgroundColorProp": "Color de fondo",
+        "auto": {
+          "title": "Diseño automático",
+          "description": "El diseño se adapta automáticamente al tamaño de la pantalla.",
+          "label": "Diseño automático"
+        },
         "vertical": {
           "title": "Diseño vertical",
-          "description": "O titulo é colocado en la parte superior y los contadores en la parte inferior. Ideal para pantallas más pequeña.",
+          "description": "O titulo é colocado en la parte superior y los contadores en la parte inferior.",
           "label": "Diseño vertical"
         },
         "horizontal": {
           "title": "Diseño horizontal",
-          "description": "O titulo é colocado en la parte izquierda y los contadores en la parte derecha. Ideal para pantallas más grandes.",
+          "description": "O titulo é colocado en la parte izquierda y los contadores en la parte derecha.",
           "label": "Diseño horizontal"
         }
       },
