--- a/website/public/locales/es/index.json
+++ b/website/public/locales/es/index.json
@@ -211,7 +211,9 @@
         "unitLabelLanguage": "Idioma",
         "labelFont": "Fuente",
         "labelSize": "Tamaño do texto",
-        "labelColor": "Color do texto"
+        "labelColor": "Color do texto",
+        "labelTextTransformUppercase": "Mayúsculas",
+        "labelTextTransformLowercase": "Minúsculas"
       }
     },
     "breakpointInfoMessage": {
